sprint4/tests/error/03_assignment.py
# Mis-matched type in assignment
#
a: int = "hello"
